Jupyther document commited

--- a/Def - Aula2 (1).ipynb
+++ b/Def - Aula2 (1).ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numero truncado:  0.30588 10^-2\n",
+      "Numero arredon:  0.30554 10^-6\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
+    "  \n",
     "def trunc(n, digi, limite):\n",
     "\n",
     "  arr = []\n",
@@ -47,22 +57,12 @@
     "    expoente = expoente - (expoente - limite)\n",
     "\n",
     "  expoente = str(expoente)\n",
-    "  final = final + \" 10^\" + expoente\n",
+    "  final = final + \" 10^-\" + expoente\n",
     "  #concatenar as partes para o resultado final\n",
     "\n",
-    "  print(\"Numero truncado: \",final)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "  print(\"Numero truncado: \",final)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "#----------------------------------------------------------------------------------------------------------------\n",
     "\n",
     "def arredon(n, digi, limite):\n",
     "  arr = []\n",
@@ -108,34 +108,35 @@
     "    expoente = expoente - (expoente - limite)\n",
     "\n",
     "  expoente = str(expoente)\n",
-    "  final = final + \" 10^\" + expoente\n",
+    "  final = final + \" 10^-\" + expoente\n",
     "  #concatenar as partes para o resultado final\n",
     "\n",
-    "  print(\"Numero arredondado: \",final)"
+    "  print(\"Numero arredon: \",final)\n",
+    "\n",
+    "\n",
+    "#def(numero, qnt.digitos, limite)\n",
+    "trunc((30.58888),5, 5)\n",
+    "arredon((3055355555.55566666),5,6)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numero truncado:  0.30588 10^2\n",
-      "Numero arredon:  0.30554 10^6\n"
-     ]
-    }
-   ],
-   "source": [
-    "trunc((30.58999999988),5, 5)\n",
-    "arredon((3055355555.55566666),5,6)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
